--- a/index.html
+++ b/index.html
@@ -26,9 +26,15 @@
              </div>
         </div>
 
+        <div class="toggle-container">
+             <button id="toggle-mode-btn">Switch to Standard Binary</button>
+        </div>
+
         <div class="binary-clock">
             <div class="time-section hours">
-                <span class="label">H:</span> <span class="binary-time" id="hours-binary">0000 0000</span> </div>
+                <span class="label">H:</span>
+                <span class="binary-time" id="hours-binary">0000 0000</span>
+            </div>
 
             <div class="time-section minutes">
                  <span class="label">M:</span>
